# spinnable

./: CLAUDE.md  Cargo.toml  PLAN.md
src/: cli.rs  convert.rs  decode.rs  encode.rs  main.rs  scan.rs
