[package]
name = "spinnable"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
hound = "3.5.1"
symphonia = { version = "0.6.0", default-features = false, features = ["flac"] }
walkdir = "2.5.0"

[dev-dependencies]
flacenc = "0.5.1"
tempfile = "3.27.0"
